changes Albers pic Ausschnitt, text changes on Exhibition, Home, Project,Symposium

--- a/app/views/static_pages/project.html.haml
+++ b/app/views/static_pages/project.html.haml
@@ -14,12 +14,12 @@
     <br>
     %p.main-intro-text GELD MACHT SICHT BAR platziert künstlerische Botschaften in jenem Raum, der üblicherweise von <strong>Werbebotschaften und Kaufparolen</strong> okkupiert wird und sorgt mit künstlerischen Mitteln für entgegenwirkende Irritation. <strong>18 nationale und internationale KünstlerInnen</strong> bzw. KünstlerInnenteams entwickeln 8 - Bogen Plakate. Ein gemeinsames, auf allen Plakaten wiederkehrendes Logo verbindet die Plakatserie. Die Auswahl der KünstlerInnen erfolgte durch den internationalen Wettbewerb der Triennale in Krakau und durch Nominierungen der beiden Kuratoren.
     <br>
-    %p.main-intro-text Begleitend werden alle Plakate des Projekts GELD MACHT SICHT BAR in der Ausstellung in.print.out - Grafik in/auswendig (19.04. - 09.06.2013) präsentiert.
+    %p.main-intro-text Die Plakate sind auf ca. 1.800 Flächen in Ostösterreich im Mai 2013 zu sehen. Begleitend werden alle Plakate des Projekts GELD MACHT SICHT BAR in der Ausstellung in.print.out - Grafik in/auswendig (19.04. - 09.06.2013) präsentiert.
     <br>
     %h2.artists-headline Teilnehmende KünstlerInnen
     %p.art.one-column 
       Team Stepan červenka / Georg Lebzelter / Nikolaus Link --<strong> AT / CZ</strong><br>
-      Team Josef Danner / Hüseyin Isik, Österreich -- <strong> TR</strong><br>
+      Team Josef Danner / Hüseyin Isik, Österreich -- <strong> AT / TR</strong><br>
       Team Lucia Dellefant / Anton Petz --<strong> AT / DE</strong><br>
       Team Ammar Abo Bakr / Aya Tarek -- <strong> EG</strong><br>
       Team Andraschek / Lobnig -- <strong> AT</strong><br>
