--- a/app/views/static_pages/symposium.html.haml
+++ b/app/views/static_pages/symposium.html.haml
@@ -20,13 +20,14 @@
     <br>
     %h2.artists-headline TeilnehmerInnen
     %p.art.one-column 
-      Marta Sylvestrová, <strong>Tschech. Rep.</strong><br> 
-      Bernhard Denscher, <strong>Österreich</strong><br> 
-      Christian Maryška, <strong>Österreich</strong><br> 
-      René Grohnert, <strong>Deutschland</strong><br> 
-      Sergius Kodera, <strong>Österreich</strong><br> 
-      Peter Stasny, <strong>Österreich</strong><br> 
-      Julia König, <strong>Österreich</strong><br> 
-      Stephan Bundi, <strong>Schweiz</strong><br> 
-      Yossi Lemel, <strong>Israel</strong><br> 
-      Paul Coldwell, <strong>UK</strong><br> 
+      Bernhard Denscher -- <strong>AT</strong><br> 
+      Christian Maryška -- <strong>AT</strong><br> 
+      Sergius Kodera -- <strong>AT</strong><br> 
+      Peter Stasny -- <strong>AT</strong><br> 
+      Julia König -- <strong>AT</strong><br> 
+      Stephan Bundi -- <strong>CH</strong><br> 
+      Marta Sylvestrová -- <strong>CZ</strong><br> 
+      René Grohnert -- <strong>DE</strong><br> 
+      Yossi Lemel -- <strong>IL</strong><br> 
+      Marek Freudenreich -- <strong>PL</strong><br> 
+      Paul Coldwell -- <strong>UK</strong><br> 
