deletes some text o on program.htmln

--- a/app/views/static_pages/program.html.haml
+++ b/app/views/static_pages/program.html.haml
@@ -78,7 +78,7 @@
     %p.sub-title.padding-big Workshops in der Passage
     %h2.date 02. - 29.5.2013
     
-    %p.main-intro-text Als ein wichtiges Vermittlungsprogramm wird in der Passagegalerie temporär eine Druckgrafikwerkstatt mit Schwerpunkt Siebdruck für SchülerInnen ab der 5. Schulstufe, sowie Kunst- und DesignstudentInnen eingerichtet. Besonders der experimentelle  und gemeinschaftliche Zugang zur Druckgrafik soll forciert werden. <br><br>Erstmals kann das Künstlerhaus in Zusammenarbeit mit der Inoperable - Galerie auch Streetart KünstlerInnen für eine Zusammenarbeit gewinnen und so die Möglichkeit bieten, die Schablonen – Graffitiherstellung und Anwendung kennen zu lernen. Zusätzlich werden für die Schulklassen Vorträge und Führungen durch die Ausstellung angeboten. Die in den Workshops entstandenen Arbeiten werden an den Wänden der Passagegalerie und der Passage zur U-Bahn präsentiert.
+    %p.main-intro-text Als ein wichtiges Vermittlungsprogramm wird in der Passagegalerie temporär eine Druckgrafikwerkstatt mit Schwerpunkt Siebdruck für SchülerInnen ab der 5. Schulstufe, sowie Kunst- und DesignstudentInnen eingerichtet. Besonders der experimentelle  und gemeinschaftliche Zugang zur Druckgrafik soll forciert werden. <br><br> Zusätzlich werden für die Schulklassen Vorträge und Führungen durch die Ausstellung angeboten. Die in den Workshops entstandenen Arbeiten werden an den Wänden der Passagegalerie und der Passage zur U-Bahn präsentiert.
     <br>
     %p.date.padding-bottom Organisation: Natalia Weiss
     %p.main-intro-text Die Workshops werden von Kultur Kontakt Austria gefördert. KulturKontakt Austria fördert die aktive Kunst- und Kulturvermittlung im schulischen Zusammenhang.
