finishes about page

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,7 +2,7 @@
   %nav
     %ul
       %li
-        %a{ :href => '#' } ABOUT
+        %a{ :href => '/static_pages/about' } ABOUT
       %li
         %a{ :href => '#' } MAP
       %li
