links to map and adds :title for about and map pages

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -4,7 +4,7 @@
       %li
         %a{ :href => '/static_pages/about' } ABOUT
       %li
-        %a{ :href => '#' } MAP
+        %a{ :href => '/static_pages/map' } MAP
       %li
         %a{ :href => 'http://www.facebook.com/pages/inprintout/252270788238577', :target => '_blank' } FB
       %li
