--- a/app/views/static_pages/map.html.haml
+++ b/app/views/static_pages/map.html.haml
@@ -1,3 +1,4 @@
+= provide(:title, 'Map')
 %p.date Künstlerhaus
 %p.date Karlsplatz 5 -- 1010 Wien
 = image_tag("Map.jpg",:class => "map", :alt => "google map for the museum")
