adds links at the bottom of program page

--- a/app/views/static_pages/program.html.haml
+++ b/app/views/static_pages/program.html.haml
@@ -147,7 +147,7 @@
 
     %p.main-intro-text Alle Veranstaltungen bei freiem Eintritt im Wiener Künstlerhaus, 1010 Wien, Karlsplatz 5.
     %p.main-intro-text Detaillierte Programminformationen: 
-    %p.main-intro-text www.umdruck.at
-    %p.main-intro-text www.univie.ac.at/iwk
+    %p.links #{ link_to "http://www.umdruck.at/", "http://www.umdruck.at/", :target => "_blank" }
+    %p.links #{ link_to "http://www.univie.ac.at/iwk", "http://univie.ac.at/iwk", :target => "_blank" }
     <br>
     / %p.main-intro-text  Monat der Grafik > siehe excel Dokument
