correts 2 names on exhibition page

--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -63,7 +63,7 @@
       <strong>Litauen:</strong> Vilija Kneyzite<br>
       <strong>Neuseeland:</strong> Stephen Lovett<br>
       <strong>Niederlande:</strong> Bert Brouwer<br>
-      <strong>Polen:</strong> Pluta Władysław<br>
+      <strong>Polen:</strong> Pluta Wladyslaw<br>
       <strong>Polen:</strong> Agnieszka Ziemiszewska<br>
       <strong>Polen:</strong> Izabella Gustowska<br>
       <strong>Polen:</strong> Rena Wota<br>
@@ -88,7 +88,7 @@
       <strong>Polen:</strong> Janusz Marciniak<br>
       <strong>Polen:</strong> Katarzyna Marzec<br>
       <strong>Polen:</strong> Brygida Masternak<br>
-      <strong>Polen:</strong> Małgorzata Mazur<br>
+      <strong>Polen:</strong> Malgorzata Mazur<br>
       <strong>Polen:</strong> Andrzej Bednarzyk<br>
       <strong>Portugal:</strong> Regina Costa<br>
       <strong>Serbien:</strong> Milan Blanusa<br>
