adds interactive map for map page and corrects name on exhibition page

--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -81,7 +81,7 @@
       <strong>Polen:</strong> Karol Pomykala<br>
       <strong>Polen:</strong> Antoni Kowalski<br>
       <strong>Polen:</strong> Krystina Piotrowksa<br>
-      <strong>Polen:</strong> Sławomir Cwiek<br>
+      <strong>Polen:</strong> Slawomir Cwiek<br>
       <strong>Polen:</strong> Jan Pamula<br>
       <strong>Polen:</strong> Tomasz Kukawski<br>
       <strong>Polen:</strong> Mariusz Palka<br>
