minor text fixes

--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -36,12 +36,12 @@
       <strong>Bulgarien:</strong> Darina Peeva<br>
       <strong>Bulgarien:</strong> Vania Valkova<br>
       <strong>Bulgarien:</strong> Lubomir Krastev<br>
-      <strong>Canada:</strong> Edith Krause<br>
-      <strong>Canada:</strong> Derek Besant<br>
-      <strong>Canada:</strong> Ericka Walker<br>
-      <strong>Canada:</strong> Jill Ho-Jou<br>
-      <strong>Canada:</strong> Cecile Boucher<br>
-      <strong>Canada:</strong> Barbara Zeigler<br>
+      <strong>Kanada:</strong> Edith Krause<br>
+      <strong>Kanada:</strong> Derek Besant<br>
+      <strong>Kanada:</strong> Ericka Walker<br>
+      <strong>Kanada:</strong> Jill Ho-Jou<br>
+      <strong>Kanada:</strong> Cecile Boucher<br>
+      <strong>Kanada:</strong> Barbara Zeigler<br>
       <strong>China:</strong> Zhang HuiJing<br>
       <strong>Deutschland:</strong> Kirsten Borchert<br>
       <strong>Deutschland:</strong> Birgit Fiedler<br>
