--- a/app/views/static_pages/project.html.haml
+++ b/app/views/static_pages/project.html.haml
@@ -19,7 +19,7 @@
     %h2.artists-headline Teilnehmende KünstlerInnen
     %p.art.one-column 
       Team Stepan červenka / Georg Lebzelter / Nikolaus Link --<strong> AT / CZ</strong><br>
-      Team Josef Danner / Hüseyin Isik, Österreich -- <strong> AT / TR</strong><br>
+      Team Josef Danner / Hüseyin Isik -- <strong> AT / TR</strong><br>
       Team Lucia Dellefant / Anton Petz --<strong> AT / DE</strong><br>
       Team Ammar Abo Bakr / Aya Tarek -- <strong> EG</strong><br>
       Team Andraschek / Lobnig -- <strong> AT</strong><br>
