adds smaller map pic

--- a/app/views/static_pages/map.html.haml
+++ b/app/views/static_pages/map.html.haml
@@ -2,5 +2,5 @@
 %p.date Künstlerhaus
 %p.date Karlsplatz 5 -- 1010 Wien
 %p.date #{ link_to "Google Maps", "http://bit.ly/15v0DS3", :target => "_blank" }
-= image_tag("Map.jpg",:class => "map", :alt => "google map for the museum")
+= image_tag("Map-small.jpg",:class => "map", :alt => "google map for the museum")
 
