small name correction Schnitzer / Kraetschmer on Exhibition page

--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -114,7 +114,7 @@
       <strong>Österreich:</strong> Ingeborg und Peter Braunsteiner<br>
       <strong>Österreich:</strong> Margret Kohler-Heilingsetzer<br>
       <strong>Österreich:</strong> Zekerya Saribatur<br>
-      <strong>Österreich:</strong> Schnitzler/KUSCH<br>
+      <strong>Österreich:</strong> Schnitzer / Krätschmer<br>
       <strong>Österreich:</strong> Reinhold Egerth<br>
       <strong>Österreich:</strong> Babsi Daum<br>
       <strong>Österreich:</strong> Martina Stock<br>
