modifies link to root_path in header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 %header.header-wrapper
   %nav
-    %a.logo{ :href => '/static_pages/home' } in.print.out
+    %a.logo{ :href => root_path } in.print.out
     .k-h-wrapper
       = link_to image_tag("K-Haus-Logo-non-hover.jpg", :mouseover => "K-Haus-Logo-hover.jpg", :alt => "Künstlerhaus-Logo-Link", :class => "k-h_logo"), "http://www.k-haus.at/", :target => "_blank"
       .k-h-logo-text
