--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -9,3 +9,8 @@
         %a{ :href => 'http://www.facebook.com/pages/inprintout/252270788238577', :target => '_blank' } FB
       %li
         %a{ :href => 'http://triennale.tumblr.com', :target => '_blank' } BLOG
+      %li 
+        = link_to_unless I18n.locale == :en, "Eng", locale: :en
+      %li          
+        = link_to_unless I18n.locale == :de, "Ger", locale: :de 
+
