--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -10,7 +10,7 @@
       %li
         %a{ :href => 'http://triennale.tumblr.com', :target => '_blank' } BLOG
       %li 
-        = link_to_unless I18n.locale == :en, "Eng", locale: :en
+        = link_to_unless I18n.locale == :en, "E", locale: :en
       %li          
-        = link_to_unless I18n.locale == :de, "Ger", locale: :de 
+        = link_to_unless I18n.locale == :de, "D", locale: :de 
 
