translates project page

--- a/app/views/static_pages/project.en.html.haml
+++ b/app/views/static_pages/project.en.html.haml
@@ -1,22 +1,21 @@
 = provide(:title, 'Plakatkunstprojekt')
 .container
   #project-page 
-    %h1.context-title.image-box GELD MACHT SICHT BAR
+    %h1.context-title.image-box MONEY MAKES VISIBLE 
 
     %h1.big-title Plakatkunstprojekt 
-    %h1.sub-sub-title GELD MACHT SICHT BAR
+    %h1.sub-sub-title MONEY MAKES VISIBLE 
     
-    %p.main-intro-text <strong>Plakatwand als Demonstrationswand</strong> ist ein europäisches Kunstprojekt von Josef Danner/Georg Lebzelter in Kooperation mit <strong>International Print Network und EPAMEDIA</strong>. Internationale KünstlerInnen setzen grafische Zeichen auf Plakatwänden. Das Hauptanliegen: Eine künstlerische <strong>Neucodierung</strong> der Zeichensprache des öffentlichen Raums anhand des Mediums Plakat. Das Plakat, das seit dem 19. Jh. immer wieder grafisch innovative Impulse setzte, soll mit den Ideen heutiger internationaler KünstlerInnen mit hoher Qualität neu thematisiert und belebt werden.
-    
+    %p.main-intro-text The poster wall as demonstration wall:<br>European art project by Josef Danner/Georg Lebzelter in cooperation with International Print Network and EPAMEDIA International artists place graphic signs on poster walls. The main purpose: an artistic recoding of sign language in the public space using the poster as medium. Having given innovative graphic impulses in the 19th century and, in some areas, also in the 70s/80s of the 20th century, the ideas of contemporary international artists will revisit and bring back to life the poster as medium in a new quality.
     .exhibition-pic
       =image_tag("Ingeborg_Strobl_Geld-macht-sichtbar_Plakat.jpg", :alt => "Plakat zum Plakatkunstprojekt Geld Macht Sicht Bar")
     %p.artist Ingeborg Strobl - Geld macht sichtbar
     <br>
-    %p.main-intro-text GELD MACHT SICHT BAR platziert künstlerische Botschaften in jenem Raum, der üblicherweise von <strong>Werbebotschaften und Kaufparolen</strong> okkupiert wird und sorgt mit künstlerischen Mitteln für entgegenwirkende Irritation. <strong>18 nationale und internationale KünstlerInnen</strong> bzw. KünstlerInnenteams entwickeln 8 - Bogen Plakate. Ein gemeinsames, auf allen Plakaten wiederkehrendes Logo verbindet die Plakatserie. Die Auswahl der KünstlerInnen erfolgte durch den internationalen Wettbewerb der Triennale in Krakau und durch Nominierungen der beiden Kuratoren.
+    %p.main-intro-text The project MONEY MAKES VISIBLE aspires to place artistic messages in this purlieu to cause irritation in the "space of solicitation" usually occupied by financially strong businesses and to put up some resistance to the sales slogans through artistic means. Amidst the surfaces that are put to commercial use, philosophical and poetical signs will be placed into the public space. Philosophical riddles that cannot be resolved by means of conventional (advertising) logic will take the place of evocative solicitations to shop. The posters are presented on 1,800 billboards in eastern Austria in May 2013.
     <br>
     %p.main-intro-text Die Plakate sind auf ca. 1.800 Flächen in Ostösterreich im Mai 2013 zu sehen. Begleitend werden alle Plakate des Projekts GELD MACHT SICHT BAR in der Ausstellung in.print.out - Grafik in/auswendig (19.04. - 09.06.2013) präsentiert.
     <br>
-    %h2.artists-headline Teilnehmende KünstlerInnen
+    %h2.artists-headline Artists
     %p.art.one-column 
       Team Stepan červenka / Georg Lebzelter / Nikolaus Link --<strong> AT / CZ</strong><br>
       Team Josef Danner / Hüseyin Isik -- <strong> AT / TR</strong><br>
