translation for symposium page

--- a/app/views/static_pages/symposium.en.html.haml
+++ b/app/views/static_pages/symposium.en.html.haml
@@ -4,21 +4,24 @@
     %h1.context-title.image-box PLAKAT MACHT ZEIT ZEICHEN
 
     %h1.big-title Symposium
-    %h2.sub-title Das Plakat - ein Medium zwischen Kunst und Kommerz
+    %h2.sub-title The poster - Symposium on a medium at the crossroads between art and commerce 2013 
     %h3.date 24 - 25.05.2013
-    %h3.location Ort: Künstlerhaus Wien, Karlsplatz 5, 1010 Wien
+    %h3.location Location: Künstlerhaus Wien, Karlsplatz 5, 1010 Wien
 
-    %p.main-intro-text Das Symposium behandelt wichtige Aspekte des oft prekären Verhältnisses von Kunst und Kommerz, Unikat und optischer Massenware sowie autonomer und angewandter gestalterischer Tätigkeit.
+    %p.main-intro-text Ever since posters came into existence, artists have reacted to the challenges of this medium, thereby developing its potential. The symposium will address important aspects of the frequently precarious relationship between art and commerce, between original and mass produced images, and between autonomous and applied artistic creations.
     
-    %p.main-intro-text Die Auseinandersetzungen mit der gegenwärtigen, von vielen Seiten diagnostizierten „Krise des Plakats“ als Medium, die maßgeblich durch die wachsende Dominanz elektronisch vermittelbarer Bild/Textkombinationen verursacht wurde, steht auf der Agenda der TeilnehmerInnen. Anhand von Fallbeispielen werden zentrale Ereignisse der Plakatkunst in den beiden vergangenen Jahrhunderten dargestellt.
+    %p.main-intro-text We plan to outline and discuss important developments of poster art during the past two centuries; in case studies we wish to explore the strategies by which independent artists managed to appropriate the poster as a medium of expression; we also want to demonstrate how outstanding commercial and political poster design (for instance by an exceptional command of the principles of formal design), contributed to the development of novel means of visual expression, thereby creating complex patterns of interaction with independent art. 
     <br>
-    %p.main-intro-text <strong>Konzept und Organisation:</strong> Sergius Kodera, Georg Lebzelter
+    %p.main-intro-text These aspects are particularly conspicuous in those many instances in which the boundaries between image and text become shifted and/or subverted; this topic is becoming increasingly central to electronic media design as it is reflected in the “pictoral turn” that today structures many approaches in cultural studies.
+    <br>
+    %p.main-intro-text The organizers hope that these perspectives are capable of opening a horizon for the debate on the current „crisis of the poster“, which accoring to many specialists is caused by the hegemony of electronically transmitted image/text combinations that increasingly structure our daily lives. 
+    %p.main-intro-text <strong>Concept & Organisation:</strong> Sergius Kodera, Georg Lebzelter
     <br>
     .exhibition-pic
       =image_tag("pic02.jpg", :alt => "pic02")
     %p.artist Shunji Nii Nomi - save me - 2008 
     <br>
-    %h2.artists-headline TeilnehmerInnen
+    %h2.artists-headline Speakers
     %p.art.one-column 
       Bernhard Denscher -- <strong>AT</strong><br> 
       Christian Maryška -- <strong>AT</strong><br> 
