small change to english project  page

--- a/app/views/static_pages/project.en.html.haml
+++ b/app/views/static_pages/project.en.html.haml
@@ -11,9 +11,9 @@
       =image_tag("Ingeborg_Strobl_Geld-macht-sichtbar_Plakat.jpg", :alt => "Plakat zum Plakatkunstprojekt Geld Macht Sicht Bar")
     %p.artist Ingeborg Strobl - Geld macht sichtbar
     <br>
-    %p.main-intro-text The project MONEY MAKES VISIBLE aspires to place artistic messages in this purlieu to cause irritation in the "space of solicitation" usually occupied by financially strong businesses and to put up some resistance to the sales slogans through artistic means. Amidst the surfaces that are put to commercial use, philosophical and poetical signs will be placed into the public space. Philosophical riddles that cannot be resolved by means of conventional (advertising) logic will take the place of evocative solicitations to shop. The posters are presented on 1,800 billboards in eastern Austria in May 2013.
+    %p.main-intro-text The project MONEY MAKES VISIBLE aspires to place artistic messages in this purlieu to cause irritation in the "space of solicitation" usually occupied by financially strong businesses and to put up some resistance to the sales slogans through artistic means. Amidst the surfaces that are put to commercial use, philosophical and poetical signs will be placed into the public space. Philosophical riddles that cannot be resolved by means of conventional (advertising) logic will take the place of evocative solicitations to shop. 
     <br>
-    %p.main-intro-text Die Plakate sind auf ca. 1.800 Flächen in Ostösterreich im Mai 2013 zu sehen. Begleitend werden alle Plakate des Projekts GELD MACHT SICHT BAR in der Ausstellung in.print.out - Grafik in/auswendig (19.04. - 09.06.2013) präsentiert.
+    %p.main-intro-text The posters are presented on 1,800 billboards in eastern Austria in May 2013.
     <br>
     %h2.artists-headline Artists
     %p.art.one-column 
