translation for index page

--- a/app/views/static_pages/index.en.html.haml
+++ b/app/views/static_pages/index.en.html.haml
@@ -2,10 +2,10 @@
 %h1.context-title.image-box.padding-bottom-small GRAFIK IN / AUSWENDIG
 
 %section
-  %p.intro-text.main-intro-text.padding-bottom Das Wiener Künstlerhaus veranstaltet 2013 mit in.print.out im Rahmen der Partnerschaft mit <strong>International Print Network (IPNet)</strong> eine Großausstellung aktueller, internationaler, künstlerischer Grafik. Ergänzt wird die Ausstellung durch eine Werkschau historischer und aktueller Plakatkunst, das Plakatprojekt für den öffentlichen Raum <strong>GELD MACHT SICHT BAR</strong> sowie weitere Begleitprogramme. 
+  %p.intro-text.main-intro-text.padding-bottom As part of the International Print Network (IPNet) the Künstlerhaus Vienna is organizing an International Graphic Arts Exhibition (18th April – 9th June, 2013), of contemporary printmaking, its processes and innovative means of representation. The exhibition also includes the Public Art Project MONEY MAKES VISIBLE were an international selection of graphic prints will be displayed on billboards in public places 
 
-%h2.big-title.center Ausstellungsraum <br /> & <br /> Plakatwand
-%h3.small-title.center Internationale Grafik im Künstlerhaus
+%h2.big-title.center Exhibition room  <br /> & <br /> Billboard
+%h3.small-title.center International Grafics at Künstlerhaus
   
 %section
   .image-boxes
@@ -21,6 +21,6 @@
       = image_tag("Albers.jpg", :alt => "pic04", :class => ".box04")
 
 %section
-  %p.text-column.main-intro-text Die Ausstellung in.print.out stellt aktuelle Tendenzen der internationalen Grafikkunst in einen neuen Kontext mit temporären Arbeiten, Installationen und raumbezogenen grafischen Experimenten. Schwerpunktmäßig im Bereich der bildenden Kunst angesiedelt, behandelt in.print.out das Phänomen Grafik in seiner Komplexität als künstlerisches Ausdrucksmedium, als Schnittstelle zwischen der traditionellen Disziplin der Druckgrafik und neuester, innovativer Techniken, zwischen analogen und digitalen Medien, zwischen bedrucktem Papier und interaktiven Installationen sowie in seiner gesellschaftlichen Funktion als Plakat.
+  %p.text-column.main-intro-text The exhibition in.print.out will focus on Graphic Art as a multidisciplinary and process-related language, were dialogues of traditional disciplines persisting self-evidently next to evolving innovative technologies, interactive installations and new forms of artistic activities. In the last years, Graphic Art accumulatively connected various streams of Contemporary Art, including Printmaking, Drawing, Photography, Graphic Design, Digital Printing Processes, Film and Digital Media. A new flood of images, virtually or analogue produced, mingled with each other and created opportunities to spurn discussions of print media, as a field of artistic experiments and the intelligent articulation of new and traditional processes. The exhibition’s goal is to illuminate the broad range of possibilities within contemporary Graphic Art Practices. At one point the show will concentrate on issues of image making, its communicative power and process related practices, were aesthetic questions and social communication structures are evolving.
 
 
