updates the english context headlines

--- a/app/views/static_pages/exhibition.en.html.haml
+++ b/app/views/static_pages/exhibition.en.html.haml
@@ -1,7 +1,7 @@
 = provide(:title, 'Austellung')
 .container
   #exhibition-page
-  %h1.context-title.image-box IDEE PROZESS FREI ZEICHEN
+  %h1.context-title.image-box IDEA PROCESS LIBERTY IMPRINT
 
   %h1.big-title in.print.out - Grafik in/auswendig
   %h3.date 19.04. - 09.06. 2013
