--- a/app/views/static_pages/symposium.en.html.haml
+++ b/app/views/static_pages/symposium.en.html.haml
@@ -1,7 +1,7 @@
 = provide(:title, "Symposium")
 .container
   #symposium-page
-    %h1.context-title.image-box PLAKAT MACHT ZEIT ZEICHEN
+    %h1.context-title.image-box TIME SIGNAL BILLBOARD POWER
 
     %h1.big-title Symposium
     %h2.sub-title The poster - Symposium on a medium at the crossroads between art and commerce 2013 
