--- a/app/views/static_pages/index.en.html.haml
+++ b/app/views/static_pages/index.en.html.haml
@@ -1,5 +1,5 @@
 = provide(:title, 'Home')
-%h1.context-title.image-box.padding-bottom-small GRAFIK IN / AUSWENDIG
+%h1.context-title.image-box.padding-bottom-small GRAFICS INSIDE OUT
 
 %section
   %p.intro-text.main-intro-text.padding-bottom As part of the International Print Network (IPNet) the Künstlerhaus Vienna is organizing an International Graphic Arts Exhibition (18th April – 9th June, 2013), of contemporary printmaking, its processes and innovative means of representation. The exhibition also includes the Public Art Project MONEY MAKES VISIBLE were an international selection of graphic prints will be displayed on billboards in public places 
