updates a subheadline on project page

--- a/app/views/static_pages/project.en.html.haml
+++ b/app/views/static_pages/project.en.html.haml
@@ -3,7 +3,7 @@
   #project-page 
     %h1.context-title.image-box MONEY MAKES VISIBLE 
 
-    %h1.big-title Plakatkunstprojekt 
+    %h1.big-title Poster Art Project
     %h1.sub-sub-title MONEY MAKES VISIBLE 
     
     %p.main-intro-text The poster wall as demonstration wall:<br>European art project by Josef Danner/Georg Lebzelter in cooperation with International Print Network and EPAMEDIA International artists place graphic signs on poster walls. The main purpose: an artistic recoding of sign language in the public space using the poster as medium. Having given innovative graphic impulses in the 19th century and, in some areas, also in the 70s/80s of the 20th century, the ideas of contemporary international artists will revisit and bring back to life the poster as medium in a new quality.
