changes the english nav tab from art project to public art project

--- a/app/views/layouts/_nav_tabs.en.html.haml
+++ b/app/views/layouts/_nav_tabs.en.html.haml
@@ -2,7 +2,7 @@
   .exhibition.link
     =link_to "Exhibition", static_pages_exhibition_path
   .project
-    =link_to "Artprojekt", static_pages_project_path
+    =link_to "Public Art Project", static_pages_project_path
   .symposium
     =link_to "Symposium", static_pages_symposium_path
   .program
