--- a/app/views/static_pages/exhibition.en.html.haml
+++ b/app/views/static_pages/exhibition.en.html.haml
@@ -56,7 +56,7 @@
       <strong>AT:</strong> Andreas Ortag<br>
       <strong>AT:</strong> Helga Cmelka<br>
       <strong>AT:</strong> Markus Gottfried<br>
-      <strong>AT:</strong> Juun<br>
+      <strong>AT:</strong> JUUN<br>
       <strong>AU:</strong> Brook Andrew<br>
       <strong>BD:</strong> Nazir Ahmed<br>
       <strong>BR:</strong> Augusto Sampaio<br>
