--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -116,7 +116,7 @@
       <strong>Österreich:</strong> Zekerya Saribatur<br>
       <strong>Österreich:</strong> Schnitzer / Krätschmer<br>
       <strong>Österreich:</strong> Reinhold Egerth<br>
-      <strong>Österreich:</strong> Juun<br>
+      <strong>Österreich:</strong> JUUN<br>
       <strong>Österreich:</strong> Babsi Daum<br>
       <strong>Österreich:</strong> Martina Stock<br>
       <strong>Österreich:</strong> Robert Svoboda<br>
